--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.4.2
 aniso8601==8.0.0
+blinker==1.4
 Cerberus==1.3.2
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
