--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,8 @@
 FLASK_ENV=development
+MAIL_SERVER = 'smtp.gmail.com' 
+MAIL_PORT = 587
+MAIL_USERNAME = 'api.freedbm@gmail.com'  
+MAIL_PASSWORD = 'chapulinc903'  
+DONT_REPLY_FROM_EMAIL = '(api.freedbm, api.freedbm@gmail.com)'
+ADMINS = ('api.freedbm@gmail.com', )  
+MAIL_USE_TLS = True
