--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,6 +12,7 @@ Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
@@ -19,6 +20,7 @@ MarkupSafe==1.1.1
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
 mysqlclient==2.0.1
+psycopg2==2.8.5
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
