--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
+flask-rest-paginate==0.1.5
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
