--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,28 @@
-alembic==1.4.2
-aniso8601==8.0.0
-blinker==1.4
-Cerberus==1.3.2
-click==7.1.2
-Flask==1.1.2
-Flask-Cors==3.0.8
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-flask-marshmallow==0.13.0
-Flask-Migrate==2.5.3
-flask-rest-paginate==0.1.5
-Flask-RESTful==0.3.8
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.4
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Mako==1.1.3
+asgiref==3.3.1
+bcrypt==3.2.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
+Django==3.1.7
+django-filter==2.4.0
+django-model-utils==4.1.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.6.0
+idna==2.10
+itypes==1.2.0
+Jinja2==2.11.3
+Markdown==3.3.4
 MarkupSafe==1.1.1
-marshmallow==3.7.1
-marshmallow-sqlalchemy==0.23.1
-mysqlclient==2.0.1
-psycopg2==2.8.5
-PyJWT==1.7.1
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-python-editor==1.0.4
-pytz==2020.1
+openapi-codec==1.3.2
+Pillow==8.1.2
+pycparser==2.20
+PyJWT==2.0.1
+pytz==2021.1
+requests==2.25.1
+simplejson==3.17.2
 six==1.15.0
-SQLAlchemy==1.3.18
-Werkzeug==1.0.1
+sqlparse==0.4.1
+uritemplate==3.0.1
+urllib3==1.26.4
